# smmdb-client

./: Cargo.toml  README.md
.github/workflows/: publish-draft.yml  rust.yml  test-pull-request.yml  test-push-and-pr.yml  test-push.yml
src/: app.rs  download.rs  emu.rs  font.rs  icon.rs  main.rs  save.rs  save_data.rs  settings.rs  smmdb.rs  styles.rs  tour.rs
src/components/: course_panel.rs  mod.rs  save_button.rs  smmdb_course_panel.rs  voting_panel.rs
src/emu/: mod.rs  save.rs
src/pages/: init.rs  mod.rs  save.rs  settings.rs
src/widgets/: courses_widget.rs  mod.rs  save_widget.rs  smmdb_widget.rs  uploads_widget.rs
