[package]
name = "smmdb"
version = "0.3.1"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
dirs = "3"
env_logger = "0.8"
futures = "0.3"
human-panic = "1"
iced = { git = "https://github.com/hecrj/iced.git", rev = "0333a8daff6db989adc6035a4c09df171a86f6fe", features = [ "image", "svg", "tokio" ] }
iced_native = { git = "https://github.com/hecrj/iced.git", rev = "0333a8daff6db989adc6035a4c09df171a86f6fe" }
iced_wgpu = { git = "https://github.com/hecrj/iced.git", rev = "0333a8daff6db989adc6035a4c09df171a86f6fe" }
image = "0.23"
indexmap = "1"
lazy_static = "1"
nfd = { version = "0.2", package = "nfd2" }
reqwest = "0.11"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_qs = "0.8"
smmdb-lib = { version = "2", git = "https://github.com/Tarnadas/smmdb-lib.git", features = [ "save" ], package = "smmdb" }

[profile]
[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1
