[package]
name = "smmdb"
version = "0.4.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
dirs = "3"
env_logger = "0.8"
futures = "0.3"
human-panic = "1"
iced = { git = "https://github.com/hecrj/iced.git", rev = "40d21d23659bdb9fc6a6166208adb351e188846b", features = [ "image", "svg", "tokio" ] }
iced_native = { git = "https://github.com/hecrj/iced.git", rev = "40d21d23659bdb9fc6a6166208adb351e188846b" }
iced_wgpu = { git = "https://github.com/hecrj/iced.git", rev = "40d21d23659bdb9fc6a6166208adb351e188846b" }
image = "0.23"
indexmap = "1"
lazy_static = "1"
nfd = { version = "0.3", package = "nfd2" }
reqwest = "0.11"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_qs = "0.8"
smmdb-lib = { version = "2", git = "https://github.com/Tarnadas/smmdb-lib.git", features = [ "save" ], package = "smmdb" }
openssl = { version = "0.10", features = ["vendored"] }

[profile]
[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1
